# ara-tools

./: .gitignore  Dockerfile  README.md  ponskaarten.ipynb  pyproject.toml  test.tex
Notebooks/: generate_pdfs.ipynb
aratools/: __init__.py  coordinate.py  csv.py  formatting.py  latex.py  parcour.py  ponskaart.py  svg.py
aratools/Notebooks/: generate_pdfs.ipynb
tests/: generate_references.py  test_coordinate.py  test_csv.py  test_formatting.py  test_parcour.py  test_ponskaart.py  test_svg.py
tests/example_data/: etappe_1.csv  etappe_2.csv  teams.csv  test_map.kml
tests/example_data/pdfs/: Etappe_1.tex  Etappe_2.tex  Etappe_3.tex  Etappe_4.tex  Etappe_5.tex  Etappe_6.tex  Etappe_7.tex
tests/gmap_data/: gmap_etappe.csv
