[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aratools"
version = "0.0.1"
authors = [
  { name="Miron van der Kolk", email="mironvanderkolk@proton.me" },
]
description = "Tools for adventure race organisation."
readme = "README.md"
requires-python = "==3.10.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pylatex>=1.4.1",
  "pyproj>=3.4.1",
  "fastkml>=0.12"
]

[project.urls]
"Homepage" = "https://github.com/mironleon/aratools"
"Bug Tracker" = "https://github.com/mironleon/aratools/issues"

[tool.isort]
profile = "black"